se crea la vista de la cuenta del usuario

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -243,3 +243,15 @@ body{
 
     text-decoration: none;
 }
+
+#subMenu{
+
+    margin-top: 90px;
+}
+.tituloCliente{
+    margin-top: 100px;
+}
+.tituloCliente h1 {
+    text-align: center;
+    text-transform: uppercase;
+}
