--- a/views/components/navbar.hbs
+++ b/views/components/navbar.hbs
@@ -33,6 +33,11 @@
                 <a class="nav-link" href="/login/logout" id="login">CERRAR SESIÓN </a>
             </li>
          </form>
+         <form>
+             <li class="nav-item">
+                <a class="nav-link" href="/account" id="login">MI CUENTA </a>
+            </li>
+         </form>
          {{else}}
         <form method="" action="">
             <li class="nav-item">
