se cargan los datos de la vista editar

--- a/views/components/menuAccount.hbs
+++ b/views/components/menuAccount.hbs
@@ -1,8 +1,8 @@
 
         <div class="col-sm-2 hidden-xs" id="subMenu">
             <div class="list-group">
-                <a class="list-group-item">MI CUENTA</a>
-                <a class="list-group-item">EDITAR CUENTA</a>
+                <a class="list-group-item" href="/account">MI CUENTA</a>
+                <a class="list-group-item" href="/account/editAccountForm">EDITAR CUENTA</a>
                 <a class="list-group-item">CONTRASEÑA</a>
                 <a class="list-group-item">HISTORIAL DE ORDENES</a>
                 <a class="list-group-item">SALIR</a>
